k8s/BE-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-backend
  template:
    metadata:
      labels:
        app: banking-backend
    spec:
      containers:
      - name: backend
        image: acesme/bank-backend:latest # Thay bằng image của bạn
        imagePullPolicy: Always
        ports:
        - containerPort: 8180 # Khớp với server.port
---

# Service cho Backend
apiVersion: v1
kind: Service
metadata:
  name: banking-backend-svc
spec:
  type: ClusterIP
  selector:
    app: banking-backend
  ports:
    - port: 8180       # App khác gọi vào cổng này
      targetPort: 8180 # Chuyển vào container cổng 8180
